--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,14 @@ background-color:#f3e8d2 ;
 p {
   font-family: "Agrandir";
 }
+h1 {
+      font-family: "Libre Baskerville", serif;
+
+}
+h2 {
+      font-family: "Libre Baskerville", serif;
+
+}
 .hero-img {
  background-image: url(Assets/pexels-tonderue-34743985\ 15.png);
 background-size: contain; 
