--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,7 @@
   
 }
 body {
-    color-scheme: light;
-margin: 0px;
+margin: 0%;
 /* background-color: var(--white); */
 background-color:#f3e8d2 ;
 
@@ -31,16 +30,16 @@ background-repeat: no-repeat;
  /* display: flex;
  justify-content: center;
  align-items: center; */
- padding-top: 120px;
- padding-bottom: 130px;
+ padding-top: 50%;
+ padding-bottom: 10%;
 
 }
 .hero-img img {
      display: flex;
  justify-content: center;
  align-items: center;
- margin-top: -50px;
- margin-left: 85px;
+ margin-top: -30%;
+ margin-left: 25%;
 }
 .landing p {
       font-size: 24px;
@@ -51,26 +50,26 @@ background-repeat: no-repeat;
     margin: 1%;
     display: flex;
     align-items: center;
-    padding: 25px;
-    gap: 50px;
+    padding: 10%;
+    gap: 15%;
     justify-content: space-between;
     flex-direction: column;
 }
 .landing a {
     text-decoration: none;
-    font-size: 30px;
+    font-size: 2rem;
 border-radius: 50px;
 text-align: center;
 color: var(--white);
 background-color:var(--red);
-width: 100px;
-height: 64px;
+width: 25%;
+padding: 5%;
 display: flex;
 align-items: center;
 justify-content: center;
 }
 .nav-shop {
-    margin: 15px;
+    margin: 5%;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -96,7 +95,7 @@ justify-content: center;
     justify-content: center;
     flex-direction: row;
     align-items: center;
-    gap: 5px;
+    gap: 10%;
 }
 .tekst-navbar {
   line-height: 0.1;
@@ -109,7 +108,7 @@ justify-content: center;
     visibility: hidden;
 }
 .navbar-product {
-    margin: 15px;
+    margin: 5%;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -125,23 +124,23 @@ justify-content: center;
     align-items: center;
 }
 .main-product p {
-      font-size: 18px;
-     margin: 75px;
+      font-size: 1.1rem;
+     margin: 20%;
 }
 .main-product img {
-  width: 250px;
-    height: 188px;
+  width: 65%;
+    height: 50%;
 
 }
 .main-product a {
 
      text-decoration: none;
-    font-size: 30px;
+    font-size: 2rem;
 border-radius: 50px;
 color: var(--white);
 background-color:var(--red);
-width: 100px;
-height: 64px;
+width:  35%;
+padding: 5%;
 display: flex;
 align-items: center;
 justify-content: center;
