--- a/styles.css
+++ b/styles.css
@@ -24,15 +24,15 @@ h2 {
 
 }
 .hero-img {
- background-image: url(Assets/pexels-tonderue-34743985\ 15.png);
+ background-image: url(Assets/pexels-tonderue-34743985\ 16.jpg);
 background-size: contain; 
 background-repeat: no-repeat;
  /* display: flex;
  justify-content: center;
  align-items: center; */
  padding-top: 50%;
- padding-bottom: 10%;
-
+ padding-bottom: 15%;
+border-radius: 0px 0px 30px 30px; 
 }
 .hero-img img {
      display: flex;
@@ -140,8 +140,7 @@ border-radius: 50px;
 color: var(--white);
 background-color:var(--red);
 width:  35%;
-padding: 5%;
-display: flex;
+padding: 5%;display: flex;
 align-items: center;
 justify-content: center;
 
